<resources>
    <string name="app_name">Sullivan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="on_back_pressed">뒤로가기를 한 번 더 누르면 앱이 종료됩니다.</string>
    <string name="try_record">아래 녹음 버튼을 누르고 \n글자를 읽어보세요!</string>
    <string name="feedback_good">잘하셨어요! \n그 발음을 기억하셔서 다양하게 활용해 보아요!</string>
    <string name="feedback_bad_0">혀뿌리로 목구멍을 막았다가 \n떼면서 발음해보세요!</string>
    <string name="feedback_bad_1">\'ㄱ\'발음에서 목청의 구멍을 아주 작게 하고 \n소리를 내보세요!</string>
    <string name="feedback_bad_2">혀로 윗잇몸을 막았다 떼면서, \n발음해보세요!</string>
    <string name="feedback_bad_3">\'ㄴ\'발음에서 조금 더 터뜨리듯 \n소리를 내보세요!</string>
    <string name="feedback_bad_4">\'ㄷ\'발음에서 목청의 구멍을 아주 작게 하고 \n소리를 내보세요!</string>
    <string name="feedback_bad_5">\'ㄴ\'발음에서 혀를 조금 더 튕기며\n 소리를 내보세요!</string>
    <string name="feedback_bad_6">혀는 편하게 두고, \n양 입술을 가볍게 붙였다 떼면서 발음해보세요!</string>
    <string name="feedback_bad_7">\'ㅁ\'발음에서 조금 더 터뜨리듯 \n소리를 내보세요!</string>
    <string name="feedback_bad_8">\'ㅂ\'발음에서 목청의 구멍을 아주 작게 하고 \n소리를 내보세요!</string>
    <string name="feedback_bad_9">앞 입천장과 혓바닥의 좁은 사이로 \n떨듯이 떼면서, 발음해보세요!</string>
    <string name="feedback_bad_10">\'ㅅ\'발음에서 목청의 구멍을 아주 작게 하고 \n소리를 내보세요!</string>
    <string name="feedback_bad_11">막는 곳이 없이 \n목구멍에서 소리를 내보세요!</string>
    <string name="feedback_bad_12">\'ㅅ\'발음에서 조금 더 터뜨리듯 \n소리를 내보세요!</string>
    <string name="feedback_bad_13">\'ㅈ\'발음에서 목청의 구멍을 아주 작게 하고 \n소리를 내보세요!</string>
    <string name="feedback_bad_14">\'ㅈ\'발음에서 조금 더 터뜨리듯 \n소리를 내보세요!</string>
    <string name="feedback_bad_15">\'ㄱ\'발음에서 조금 더 터뜨리듯 \n소리를 내보세요!</string>
    <string name="feedback_bad_16">\'ㄷ\'발음에서 조금 더 터뜨리듯 \n소리를 내보세요!</string>
    <string name="feedback_bad_17">\'ㅂ\'발음에서 조금 더 터뜨리듯 \n소리를 내보세요!</string>
    <string name="feedback_bad_18">\'ㅎ\'발음에서 조금 더 속에서 세게 \n소리를 내보세요!</string>
    <string name="feedback_bad_19">입벌림이 검지 손가락 두 마디 반 사이 정도에서, \n입 안쪽 어금니 쪽으로 발음해보세요!</string>
    <string name="feedback_bad_20">입벌림이 검지 손가락 두 마디 사이 정도에서, \n혀끝을 아랫니쪽으로 향하게 한 후 발음해보세요!</string>
    <string name="feedback_bad_21">\'ㅣ\'와 \'ㅏ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_22">\'ㅣ\'와 \'ㅐ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_23">입벌림이 검지 손가락 한 마디 반 사이 정도에서, \n입 안쪽 어금니 쪽으로 발음해보세요!</string>
    <string name="feedback_bad_24">입벌림이 검지 손가락 한 마디 반 사이 정도에서, \n혀끝을 아랫니쪽으로 향하게 한 후 발음해보세요!</string>
    <string name="feedback_bad_25">\'ㅣ\'와 \'ㅓ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_26">\'ㅣ\'와 \'ㅔ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_27">입벌림이 검지 손가락 한 마디 반 사이 정도에서, \n그대로 소리를 내보세요!</string>
    <string name="feedback_bad_28">\'ㅗ\'와 \'ㅏ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_29">\'ㅗ\'와 \'ㅐ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_30">\'ㅗ\'와 \'ㅔ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_31">\'ㅣ\'와 \'ㅗ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_32">입벌림이 검지 손가락 한 마디 정도에서, \n그대로 소리를 내보세요!</string>
    <string name="feedback_bad_33">\'ㅜ\'와 \'ㅓ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_34">\'ㅜ\'와 \'ㅔ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_35">\'ㅜ\'와 \'ㅣ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_36">\'ㅣ\'와 \'ㅜ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_37">입벌림이 검지 손가락 한 마디 정도에서, \n입 안쪽 어금니 쪽으로 발음해보세요!</string>
    <string name="feedback_bad_38">\'ㅡ\'와 \'ㅣ\' 발음을 \n빠르게 내보세요!</string>
    <string name="feedback_bad_39">입벌림이 검지 손가락 한 마디 정도에서, \n혀끝을 아랫니쪽으로 향하게 한 후 발음해보세요!</string>
    <string name="feedback_bad">조금 다르게 발음하셨어요ㅠㅠ. \n다시 한 번 시도해보세요!</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="session_chatbot">챗봇</string>
    <string name="session_sentences">문장</string>
    <string name="session_pronunciation">발음법</string>
    <string name="session_syllable">음절</string>
    <string name="session_settings">설정</string>
    <string name="consonant">자음</string>
    <string name="vowel">모음</string>
    <string name="char_consonants">ㄱ ㄲ ㄴ ㄷ ㄸ ㄹ ㅁ ㅂ ㅃ ㅅ ㅆ ㅇ ㅈ ㅉ ㅊ ㅋ ㅌ ㅍ ㅎ</string>
    <string name="char_vowels">ㅏ ㅐ ㅑ ㅒ ㅓ ㅔ ㅕ ㅖ ㅗ ㅘ ㅙ ㅚ ㅛ ㅜ ㅝ ㅞ ㅟ ㅠ ㅡ ㅢ ㅣ</string>
    <string name="ㄱ">입천장 뒷부분을 혀의 뒷부분으로 막은 다음 공기로 열면서 소리를 냅니다.</string>
    <string name="ㄲ">\'ㄱ\' 발음을 더 세게 발음합니다.</string>
    <string name="ㄴ">입천장 앞부분 전체를 혀의 앞부분 전체로 막고 열면서 소리를 냅니다.</string>
    <string name="ㄷ">\'ㄴ\' 발음에서 혀를 열 때 공기를 넣어서 소리를 냅니다.</string>
    <string name="ㄸ">\'ㄷ\' 발음을 더 세게 발음합니다.</string>
    <string name="ㄹ">입천장 앞 끝부분에 혀 끝부분을 차면서 소리를 냅니다.</string>
    <string name="ㅁ">윗, 아렛입술을 다문 다음 열면서 소리를 냅니다.</string>
    <string name="ㅂ">\'ㅁ\'발음에서 입을 열 때 공기를 넣어서 소리를 냅니다.</string>
    <string name="ㅃ">\'ㅂ\' 발음을 더 세게 발음합니다.</string>
    <string name="ㅅ">양 입술을 벌리고 이를 다문 상태에서 혀 끝부분을 이 앞쪽으로 가까이 한 다음 공기를 넣어 소리를 냅니다.</string>
    <string name="ㅆ">\'ㅅ\' 발음을 더 세게 발음합니다.</string>
    <string name="ㅇ">입을 벌려서 소리를 냅니다.</string>
    <string name="ㅈ">\'ㅅ\' 발음에서 혀 끝부분을 이에 맞닿은 상태로 소리를 냅니다.</string>
    <string name="ㅉ">\'ㅈ\' 발음을 더 세게 발음합니다.</string>
    <string name="ㅊ">\'ㅈ\' 발음에 공기를 더 넣어 소리를 냅니다.</string>
    <string name="ㅋ">\'ㄱ\' 발음에 공기를 더 넣어 소리를 냅니다.</string>
    <string name="ㅌ">\'ㄷ\' 발음에 공기를 더 넣어 소리를 냅니다.</string>
    <string name="ㅍ">\'ㅂ\' 발음에 공기를 더 넣어 소리를 냅니다.</string>
    <string name="ㅎ">\'ㅇ\' 발음에 공기를 더 넣어 소리를 냅니다.</string>
    <string name="ㅏ">입을 웃는 표정처럼 양 볼에서 당기듯이 벌리고 혀를 뒤쪽으로 위치한 상태로 소리를 냅니다.</string>
    <string name="ㅐ">입을 편한 상태로 벌리고 혀를 앞쪽으로 위치한 상태로 소리를 냅니다.</string>
    <string name="ㅑ">\'ㅣ\' 발음을 짧게 한 뒤 \'ㅏ\' 발음을 합니다.</string>
    <string name="ㅒ">\'ㅣ\' 발음을 짧게 한 뒤 \'ㅐ\' 발음을 합니다.</string>
    <string name="ㅓ">\'ㅏ\' 발음에서 입술을 동그랗게 벌린 상태로 소리를 냅니다.</string>
    <string name="ㅔ">\'ㅐ\' 발음보다 입을 더 작게 벌린 상태로 소리를 냅니다.</string>
    <string name="ㅕ">\'ㅣ\' 발음을 짧게 한 뒤 \'ㅓ\' 발음을 합니다.</string>
    <string name="ㅖ">\'ㅣ\' 발음을 짧게 한 뒤 \'ㅔ\' 발음을 합니다.</string>
    <string name="ㅗ">바람 불듯이 입술을 동그랗게 모으고 입 안쪽은 벌린 상태로 소리를 냅니다.</string>
    <string name="ㅘ">\'ㅗ\' 발음을 짧게 한 뒤 \'ㅏ\' 발음을 합니다.</string>
    <string name="ㅙ">\'ㅗ\' 발음을 짧게 한 뒤 \'ㅐ\' 발음을 합니다.</string>
    <string name="ㅚ">\'ㅗ\' 발음을 짧게 한 뒤 \'ㅔ\' 발음을 합니다.</string>
    <string name="ㅛ">\'ㅣ\' 발음을 짧게 한 뒤 \'ㅗ\' 발음을 합니다.</string>
    <string name="ㅜ">바람 불듯이 입술을 동그랗게 모으고 입 안쪽은 거의 닫힌 상태로 소리를 냅니다.</string>
    <string name="ㅝ">\'ㅜ\' 발음을 짧게 한 뒤 \'ㅓ\' 발음을 합니다.</string>
    <string name="ㅞ">\'ㅜ\' 발음을 짧게 한 뒤 \'ㅔ\' 발음을 합니다.</string>
    <string name="ㅟ">\'ㅜ\' 발음을 짧게 한 뒤 \'ㅣ\' 발음을 합니다.</string>
    <string name="ㅠ">\'ㅣ\' 발음을 짧게 한 뒤 \'ㅜ\' 발음을 합니다.</string>
    <string name="ㅡ">입을 다문 상태에서 혀를 뒤쪽에 위치하고 입술을 양 옆으로 길게 벌린 상태에서 소리를 냅니다.</string>
    <string name="ㅢ">\'ㅡ\' 발음을 짧게 한 뒤 \'ㅣ\' 발음을 합니다.</string>
    <string name="ㅣ">입을 다문 상태에서 혀를 앞쪽에 위치하고 입술을 양 옆으로 길게 벌린 상태에서 소리를 냅니다.</string>
    <string name="support_characters">받침의 발음</string>
    <string name="s1_explanation1">받침소리로는 \‘ㄱ, ㄴ, ㄷ, ㄹ, ㅁ, ㅂ, ㅇ\’의 7개 자음만 발음합니다.</string>
    <string name="s1_explanation2">초성과 중성을 발음한 후 종성 자음을 발음하여 소리를 마무리짓는다고 생각하시면 쉬워요!</string>
    <string name="s1_example1">낙지\n관상\n받다\n가을</string>
    <string name="s1_example2">곰\n압정\n강아지</string>
    <string name="s2_explanation1">아래 받침들은 어말 또는 자음 앞에서 \n다음 대표음으로 발음합니다.</string>
    <string name="s2_explanation2">ㄲㅋ</string>
    <string name="s2_explanation3">ㅅㅆㅈㅊㅌ</string>
    <string name="s2_explanation4">ㅍ</string>
    <string name="s2_explanation5">ㄱ</string>
    <string name="s2_explanation6">ㄷ</string>
    <string name="s2_explanation7">ㅂ</string>
    <string name="s2_example1">닦다\n옷\n덮다</string>
    <string name="s2_example2">[닥따]\n[옫]\n[업따]</string>
    <string name="s3_explanation1">아래 받침들은 어말 또는 자음 앞에서 \n다음 대표음으로 발음합니다.</string>
    <string name="s3_explanation2">ㄳ</string>
    <string name="s3_explanation3">ㄵ</string>
    <string name="s3_explanation4">ㄼㄽㄾ</string>
    <string name="s3_explanation5">ㅍ</string>
    <string name="s3_explanation6">ㄱ</string>
    <string name="s3_explanation7">ㄷ</string>
    <string name="s3_explanation8">ㄹ</string>
    <string name="s3_explanation9">ㅂ</string>
    <string name="s3_example1">넋\n앉다\n여덟\n값</string>
    <string name="s3_example2">[넉]\n[안따]\n[여덜]\n[갑]</string>
    <string name="s4_explanation1">아래 받침들은 어말 또는 자음 앞에서 \n다음 대표음으로 발음합니다.</string>
    <string name="s4_explanation2">ㄺ</string>
    <string name="s4_explanation3">ㄻ</string>
    <string name="s4_explanation4">ㄿ</string>
    <string name="s4_explanation5">ㄱ</string>
    <string name="s4_explanation6">ㅁ</string>
    <string name="s4_explanation7">ㅍ</string>
    <string name="s4_example1">닭\n삶\n읊다</string>
    <string name="s4_example2">[닥]\n[삼]\n[읍따]</string>
    <string name="s5_explanation1">받침 \'ㅎ(ㄶ, ㅀ)\' 뒤에 다음 자음이 결합되는 경우\n소리가 합쳐져 다음과 같이 발음합니다.</string>
    <string name="s5_explanation2">ㄱ</string>
    <string name="s5_explanation3">ㄷ</string>
    <string name="s5_explanation4">ㅈ</string>
    <string name="s5_explanation5">ㅋ</string>
    <string name="s5_explanation6">ㅌ</string>
    <string name="s5_explanation7">ㅊ</string>
    <string name="s5_example1">놓고\n좋던\n닳지</string>
    <string name="s5_example2">[노코]\n[조턴]\n[달치]</string>
    <string name="s6_explanation1">받침 \'ㄱ(ㄺ), ㄷ, ㅂ(ㄼ), ㅈ(ㄵ)\' 뒤에 음절 첫소리 \'ㅎ\'과 결합되는 경우 역시 소리가 합쳐져 \n다음과 같이 발음합니다.</string>
    <string name="s6_explanation2">ㄱ(ㄺ)</string>
    <string name="s6_explanation3">ㄷ</string>
    <string name="s6_explanation4">ㅂ(ㄼ)</string>
    <string name="s6_explanation5">ㅈ(ㄵ)</string>
    <string name="s6_explanation6">ㅋ</string>
    <string name="s6_explanation7">ㅌ</string>
    <string name="s6_explanation8">ㅍ</string>
    <string name="s6_explanation9">ㅊ</string>
    <string name="s6_example1">각하\n맏형\n좁히다\n꽂히다</string>
    <string name="s6_example2">[가카]\n[마텽]\n[조피다]\n[널피다]</string>
    <string name="s7_explanation1">\'ㄷ\'으로 발음되는 \'ㅅ, ㅈ, ㅊ, ㅌ\' 받침의 경우에도 뒤 음절 첫소리 \'ㅎ\'과 \n결합되어 발음합니다.</string>
    <string name="s7_example1">옷 한 벌\n낮 한 때\n꽃 한 송이\n숱하다</string>
    <string name="s7_example2">[오탄벌]\n[나탄때]\n[꼬탄송이]\n[수타다]</string>
    <string name="s8_explanation1">\‘ㅎ(ㄶ, ㅀ)\’뒤에 \‘ㅅ\’이 결합되는 경우에는, \‘ㅅ\’을 [ㅆ]으로 발음합니다.</string>
    <string name="s8_example1">닿소\n많소\n싫소\n좋소</string>
    <string name="s8_example2">[다쏘]\n[만쏘]\n[실쏘]\n[조쏘]</string>
    <string name="s9_explanation1">\'ㅎ\' 뒤에 \'ㄴ\'이 결합되는 경우,\n[ㄴ]으로 발음합니다.</string>
    <string name="s9_example1">놓는\n쌓네</string>
    <string name="s9_example2">[논는]\n[싼네]</string>
    <string name="s9_explanation2">\'ㄶ, ㅀ\' 뒤에 \'ㄴ\'이 결합되는 경우, \'ㅎ\'을 발음하지 않습니다.</string>
    <string name="s9_example3">않네\n뚫네</string>
    <string name="s9_example4">[안네]\n[뚤네]</string>
    <string name="s10_explanation1">\'ㅎ(ㄶ,ㅀ)\' 뒤에 모음으로 시작된 어미나 접미사가 결합되는 경우,\n\'ㅎ\'을 발음하지 않습니다.</string>
    <string name="s10_example1">낳은\n많아\n싫어도</string>
    <string name="s10_example2">[나은]\n[마나]\n[시러도]</string>
    <string name="s11_explanation1">홑받침이나 쌍받침이 모음으로 시작된 조사나 어미, 접미사가 결합되는 경우, 받침 소리를 뒤 음절 첫소리로 옮겨 발음합니다.</string>
    <string name="s11_example1">깎아\n옷이\n꽂아\n밭에\n앞으로</string>
    <string name="s11_example2">[까까]\n[오시]\n[꼬자]\n[바테]\n[아프로]</string>
    <string name="s12_explanation1">겹받침이 모음으로 시작된 조사나 어미, 접미사와 결합되는 경우, 뒤엣것만을 뒤 음절 첫소리로 옮겨 발음합니다. \n(이 때, \'ㅅ\'은 된소리로 발음합니다.)</string>
    <string name="s12_example1">앉아\n젊어\n핥아\n값을\n없어</string>
    <string name="s12_example2">[안자]\n[절머]\n[할타]\n[갑쓸]\n[업써]</string>
    <string name="sentence_to_practice">여기에 연습하고싶은 문장을 적으세요.</string>
    <string name="sentence_try_record">아래 녹음 버튼을 누르고 \n위 문장을 읽어보세요!</string>
    <string name="sentence_result_practice">위 문장을 이렇게 말씀하셨어요!</string>
</resources>