<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PronunciationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:id="@+id/linearLayout_sentence_practice"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:background="@drawable/shape_textbox_round"
            android:padding="5dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editText_sentence_practice"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/sentence_to_practice"
                android:layout_height="0dp"
                android:maxLines="5"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="클릭해서 발음대로의 문장을 확인해 보세요!" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="@color/colorLightBorder"/>

            <TextView
                android:id="@+id/textView_sentence_pronunciation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="viewStart"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:layout_weight="1"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sentence_result_practice"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout_sentence_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout_sentence_result"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/shape_textbox_round"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_sentence_practice">

            <TextView
                android:id="@+id/textView_sentence_result"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="viewStart"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_sentence_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sentence_try_record"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_sentence_result"
            app:layout_constraintBottom_toTopOf="@+id/btn_sentence_record"/>

        <FrameLayout
            android:id="@+id/btn_sentence_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/shape_button_record" />

            <ImageView
                android:id="@+id/imageView_record_off"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_mic" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>